--- a/index.html
+++ b/index.html
@@ -6,8 +6,9 @@
 		  content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
 	<meta http-equiv="X-UA-Compatible" content="ie=edge">
 	<title>Document</title>
-	<link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css">
-	<link href="https://fonts.googleapis.com/css?family=Pacifico|Raleway" rel="stylesheet">
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"
+		  integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+
 	<link rel="stylesheet" href="css/main.css">
 </head>
 <body>
@@ -40,15 +41,19 @@
 									 fringilla
 									 .</p>
 	</div>
-	<div class="order-info col-md-3 col-md-offset-1">
+	<div class="order-info col-md-4">
 		<div class="big-icon">
 			<img src="img/iconStar.svg" alt="">
 		</div>
 		<p class="text-center raleway"><b>Flat Design</b></p>
-		<p class="text-justify text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse fringilla
-									 fringilla.</p>
+		<p class="text-center text center">Lorem ipsum dolor sit amet, consectetur
+										   adipiscing
+										   elit.
+										   Suspendisse
+										   fringilla
+										   fringilla.</p>
 	</div>
-	<div class="order-info col-md-3 col-md-offset-1">
+	<div class="order-info col-md-3">
 		<div class="big-icon"><img src="img/iconEarth.svg" alt=""></div>
 		<p class="text-center raleway">
 			<b>Reach Your Audience</b></p>
@@ -77,8 +82,6 @@
 			<div class="form">
 				<input type="text" placeholder="Email Address">
 
-				<div class="green"></div>
-
 				<button class="btn-form">Notify</button>
 
 			</div>
@@ -91,7 +94,8 @@
 
 	<div class="video col-md-5 col-md-offset-1">
 
-		<iframe class="player" src="https://player.vimeo.com/video/216438001" width="500" height="300" frameborder="0"
+		<iframe class="player" src="https://player.vimeo.com/video/216438001" width="100%" height="300px"
+				frameborder="0"
 				webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
 
 
@@ -119,16 +123,17 @@
 
 	<div class="images text-center"><img src="img/img.jpg" alt=""></div>
 	<p class="col-md-6 col-md-offset-3 text-center raleway say"><b>Say Hi & Get in Touch</b></p>
-	<p class="col-md-6 col-md-offset-3 text-center text">Lorem ipsum dolor sit amet, consectetur adipiscing elit suspendisse. </p>
+	<p class="col-md-6 col-md-offset-3 text-center text">Lorem ipsum dolor sit amet, consectetur adipiscing elit
+														 suspendisse. </p>
 
 	<div class="social-wrapper col-md-6 col-md-offset-3">
 		<div class="social">
-			<div class="social-btn"><a href="#"> <img src="img/twit.png" alt=""></a>  </div>
-			<div class="social-btn"><a href="#"> <img src="img/face.svg" alt=""></a>  </div>
-			<div class="social-btn"><a href="#"> <img src="img/D.svg" alt=""></a>  </div>
-			<div class="social-btn"><a href="#"> <img src="img/G.svg" alt=""></a>  </div>
-			<div class="social-btn"><a href="#"> <img src="img/Ln.svg" alt=""></a>  </div>
-			<div class="social-btn"><a href="#"> <img src="img/Y.svg" alt=""></a>  </div>
+			<div class="social-btn"><a href="#"> <img src="img/twit.png" alt=""></a></div>
+			<div class="social-btn"><a href="#"> <img src="img/face.svg" alt=""></a></div>
+			<div class="social-btn"><a href="#"> <img src="img/D.svg" alt=""></a></div>
+			<div class="social-btn"><a href="#"> <img src="img/G.svg" alt=""></a></div>
+			<div class="social-btn"><a href="#"> <img src="img/Ln.svg" alt=""></a></div>
+			<div class="social-btn"><a href="#"> <img src="img/Y.svg" alt=""></a></div>
 		</div>
 	</div>
 
